fix layout bugs

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -20,25 +20,15 @@ body::-webkit-scrollbar {
 }
 
 .app {
-  height: 100vh;
+  height: auto;
   width: 100%;
-  //min-height: 82rem;
   min-width: 40rem;
-  //height: auto;
   display: flex;
   align-items: center;
   flex-flow: column;
   transition: background 300ms linear;
   background: linear-gradient(to top, #5ee7df 0%, #66a6ff 100%);
   padding-bottom: 2rem;
-}
-
-.medium-app {
-  height: auto;
-}
-
-.large-app {
-
 }
 
 .app-dark {
@@ -190,26 +180,24 @@ body::-webkit-scrollbar {
 */
 
 .main__card {
-  //height: 73rem;
+  height: 990px;
   min-width: 40rem;
   width: 60vw;
   background-color: #fff;
   border-radius: 1rem;
   display: flex;
   flex-flow: column;
-  justify-content: center;
   align-items: center;
   user-select: none;
   margin-top: 5rem;
-  animation: 1s ease-in-out slideup,1.25s ease-in-out fadein;
-}
-
-.medium-main_card {
-
 }
 
 .large-main_card {
+  height: 1154px;
+}
 
+.largePlus-main_card {
+  height: 1284px;
 }
 
 .city-search-wrapper {
@@ -420,6 +408,7 @@ $color: #ffffff;
 
 .cities-info {
   width: 100%;
+  flex-grow: 1;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -450,23 +439,25 @@ $color: #ffffff;
       justify-content: center;
     }
   }
+}
 
+@media screen and (max-width: 725px) {
   .main__card {
-    margin-top: 6rem;
+    margin-top: 7rem;
   }
 }
 
-@media screen and (min-height: 1366px) {
-  .app {
-    height: 89rem;
-  }
-}
+// @media screen and (min-height: 1366px) {
+//   .app {
+//     height: 89rem;
+//   }
+// }
 
-@media screen and (max-height: 420px) {
-  .app {
-    height: 87rem;
-  }
-}
+// @media screen and (max-height: 420px) {
+//   .app {
+//     height: 87rem;
+//   }
+// }
 
 
 @keyframes slidedown {
